--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,19 @@
   "name": "Albin'bookmarks",
   "description": "Base Level Extension",
   "version": "1.0",
-    "permissions": ["bookmarks"],
+    "permissions": ["bookmarks", "activeTab"],
   "manifest_version": 3,
   "action": {
     "default_popup": "hello.html",
     "default_icon": "hello_extensions.png"
+  },
+  "minimum_chrome_version": "102",
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Ctrl+B",
+        "mac": "Command+B"
+      }
+    }
   }
 }
