--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Albin'bookmarks",
   "description": "Base Level Extension",
   "version": "1.0",
-    "permissions": ["bookmarks", "activeTab"],
+    "permissions": ["bookmarks", "activeTab", "storage"],
   "manifest_version": 3,
   "action": {
     "default_popup": "hello.html",
