--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+    "default_icon": "bicon.png"
   },
   "minimum_chrome_version": "102",
   "commands": {
